Update aquahawk-client requirement to 0.0.1
Signed-off-by: Andy Blyler <andy@blyler.cc>

--- a/custom_components/aquahawk/manifest.json
+++ b/custom_components/aquahawk/manifest.json
@@ -6,6 +6,6 @@
   "dependencies": [],
   "documentation": "https://github.com/ablyler/home-assistant-aquahawk",
   "iot_class": "cloud_polling",
-  "requirements": ["aquahawk-client==0.0.1rc8"],
+  "requirements": ["aquahawk-client==0.0.1"],
   "version": "0.0.3"
 }
