--- a/custom_components/aquahawk/manifest.json
+++ b/custom_components/aquahawk/manifest.json
@@ -6,6 +6,7 @@
   "dependencies": [],
   "documentation": "https://github.com/ablyler/home-assistant-aquahawk",
   "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/ablyler/home-assistant-aquahawk/issues",
   "requirements": ["aquahawk-client==0.0.1"],
-  "version": "0.0.3"
+  "version": "0.0.4"
 }
