--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -14,11 +14,11 @@ runtimes:
     - python@3.10.8
 lint:
   enabled:
+    - hadolint@2.12.0
     - markdownlint@0.37.0
     - actionlint@1.6.26
     - bandit@1.7.5
     - black@23.9.1
-    - checkov@2.5.9
     - flake8@6.1.0
     - git-diff-check
     - isort@5.12.0
@@ -27,7 +27,6 @@ lint:
     - prettier@3.0.3
     - ruff@0.1.1
     - taplo@0.8.1
-    - trivy@0.46.0
     - trufflehog@3.60.0
     - yamllint@1.32.0
 actions:
