--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -29,6 +29,13 @@ lint:
     - taplo@0.8.1
     - trufflehog@3.60.0
     - yamllint@1.32.0
+  ignore:
+    - linters: [ALL]
+      paths:
+        # GitHub Issue Templates
+        - .github/ISSUE_TEMPLATE/**
+        # Dev Container Dockerfile
+        - .devcontainer/Dockerfile
 actions:
   disabled:
     - trunk-announce
