--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,11 +2,11 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.17.2
+  version: 1.18.1
 plugins:
   sources:
     - id: trunk
-      ref: v1.3.0
+      ref: v1.4.1
       uri: https://github.com/trunk-io/plugins
 runtimes:
   enabled:
@@ -14,30 +14,28 @@ runtimes:
     - python@3.10.8
 lint:
   enabled:
-    - checkov@3.1.9
-    - trivy@0.47.0
+    - checkov@3.1.50
+    - trivy@0.48.1
     - hadolint@2.12.0
-    - markdownlint@0.37.0
+    - markdownlint@0.38.0
     - actionlint@1.6.26
-    - bandit@1.7.5
-    - black@23.9.1
+    - bandit@1.7.6
+    - black@23.12.1
     - flake8@6.1.0
     - git-diff-check
-    - isort@5.12.0
-    - mypy@1.7.1
-    - osv-scanner@1.4.3
-    - prettier@3.1.0
-    - ruff@0.1.6
+    - isort@5.13.2
+    - mypy@1.8.0
+    - osv-scanner@1.5.0
+    - prettier@3.1.1
+    - ruff@0.1.9
     - taplo@0.8.1
-    - trufflehog@3.63.2-rc0
+    - trufflehog@3.63.7
     - yamllint@1.33.0
   ignore:
     - linters: [ALL]
       paths:
         # GitHub Issue Templates
         - .github/ISSUE_TEMPLATE/**
-        # Dev Container Dockerfile
-        - .devcontainer/Dockerfile
 actions:
   disabled:
     - trunk-announce
