--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,12 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
   "name": "Python 3",
-  "build": {
-    // Path is relative to the devcontainer.json file.
-    "dockerfile": "Dockerfile"
-  },
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "features": {
-    "ghcr.io/devcontainers-contrib/features/pipenv:2": {}
+    "ghcr.io/devcontainers-contrib/features/pipenv:2": {},
+    "ghcr.io/devcontainers-contrib/features/apt-packages:1": {
+      "packages": ["direnv"]
+    }
   },
   "customizations": {
     "vscode": {
@@ -33,7 +33,7 @@
   // "forwardPorts": [],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "PIPENV_VENV_IN_PROJECT=1 pipenv install -d"
+  "postCreateCommand": "curl https://get.trunk.io -fsSL | bash -s -- -y && PIPENV_VENV_IN_PROJECT=1 pipenv install -d"
 
   // Configure tool-specific properties.
   // "customizations": {},
