--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,35 +2,34 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.18.1
+  version: 1.22.8
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.1
+      ref: v1.6.6
       uri: https://github.com/trunk-io/plugins
 runtimes:
   enabled:
-    - node@18.12.1
+    - node@18.20.5
     - python@3.10.8
 lint:
   enabled:
-    - checkov@3.1.50
-    - trivy@0.48.1
-    - hadolint@2.12.0
-    - markdownlint@0.38.0
-    - actionlint@1.6.26
-    - bandit@1.7.6
-    - black@23.12.1
-    - flake8@6.1.0
+    - checkov@3.2.352
+    - trivy@0.58.2
+    - hadolint@2.12.1-beta
+    - markdownlint@0.43.0
+    - actionlint@1.7.6
+    - bandit@1.8.2
+    - black@24.10.0
+    - flake8@7.1.1
     - git-diff-check
     - isort@5.13.2
-    - mypy@1.8.0
-    - osv-scanner@1.5.0
-    - prettier@3.1.1
-    - ruff@0.1.9
-    - taplo@0.8.1
-    - trufflehog@3.63.7
-    - yamllint@1.33.0
+    - mypy@1.14.1
+    - prettier@3.4.2
+    - ruff@0.9.1
+    - taplo@0.9.3
+    - trufflehog@3.88.2
+    - yamllint@1.35.1
   ignore:
     - linters: [ALL]
       paths:
